test/typechecker.d/invalid/sub2.surc.bad
main(): IO = do
	write ; needs an argument!
